--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "mango",
-  "devDependencies": {
-    "@vue/runtime-dom": "^3.3.11",
-    "bun-types": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+  "name": "mango-assembler-simulator",
+  "scripts": {
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node .",
+    "test": "jest",
+    "test:debug": "jest --runInBand"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "vue": "^3.3.11"
+    "typescript": "^5.4.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2"
   }
 }
