--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "mango-assembler-simulator",
   "scripts": {
-    "build": "npx tsc",
+    "build-ts": "npx tsc",
     "test": "jest",
-    "test:debug": "jest --runInBand"
+    "test:debug": "jest --runInBand",
+    "dev": "vite",
+    "preview": "vite preview",
+    "build": "vite build"
   },
   "jest": {
     "preset": "ts-jest",
@@ -13,9 +16,12 @@
     "typescript": "^5.4.3"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^5.2.1",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2"
+    "ts-jest": "^29.1.2",
+    "vite": "^6.2.0",
+    "vue": "^3.5.13"
   }
 }
