--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,46 @@
-name: Build and Test
+name: Build and Deploy
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+permissions:
+  contents: write
 
 jobs:
-  test:
+  setup:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
       - name: Install Packages 📦
+        id: install-packages
         run: npm ci
+
+  test-and-build:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
 
       - name: Run Tests 🔧
         run: npm test
-
-      - name: Building Website 🔧
+      
+      - name: Build Website 🔧
         run: |
           npm run build-emulator
           npm run build
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [setup, test-and-build]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'  # Only runs on push to main
+    steps:
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: dist
