--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,34 +10,30 @@ permissions:
   contents: write
 
 jobs:
-  setup:
+  build-and-deploy:
+
     runs-on: ubuntu-latest
+
     steps:
+    
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
       - name: Install Packages 📦
-        run: npm ci
+        run: |
+          npm ci
 
-  test-and-build:
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
+      - name: Testing 🧪
+        run: |
+          npm test
 
-      - name: Run Tests 🔧
-        run: npm test
-      
-      - name: Build Website 🔧
+      - name: Building Website 🔧
         run: |
           npm run build-emulator
           npm run build
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [setup, test-and-build]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'  # Only runs on push to main
-    steps:
       - name: Deploy 🚀
+        if: github.ref == 'refs/heads/main'
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: dist
